Change all JsontoRefined Constructor into builder patterns for readability